# fext-stdcomm

./: .clang-format  .code.yml  .copier-answers.yml  .gitignore  .gitmodules  CNAME  CPPLINT.cfg  README.md  README.zh-cn.md  build.py  build_config.py  build_oa_pages.py  build_pages.py  copier_extensions.py  update_changelog.py  update_component.py
stdcomm/: CMakeConfig.local.cmake  CMakeLists.txt  build.gradle.kts  build_android.py  build_benches.py  build_config.py  build_docs.py  build_include.py  build_ios.py  build_linux.py  build_macos.py  build_tests.py  build_utils.py  build_windows.py  gradle.properties  main_project.podspec  settings.gradle.kts
stdcomm/android/empty_android_lib_to_recognise_cpp/: build.gradle.kts
stdcomm/android/main_android_sdk/: build.gradle.kts  proguard-rules.pro
stdcomm/benches/: CMakeLists.txt
stdcomm/build-logic/: settings.gradle.kts
stdcomm/build-logic/convention/: build.gradle.kts
stdcomm/cmake/: CMakeConfig.cmake  CMakeExtraFlags.cmake  CMakeFunctions.cmake  CMakeUtils.cmake  ios.toolchain.cmake
stdcomm/cmake/template/: Benches.CMakeLists.txt.in  Root.CMakeLists.txt.in  Src.CMakeLists.txt.in  Src.SubDir.CMakeLists.txt.in  Tests.CMakeLists.txt.in
stdcomm/copyright/: copyright.kt  copyright.kts  copyright.xml
stdcomm/docs/: CMakeLists.txt  Doxyfile.in  Doxyfile.zh-cn.in
stdcomm/docs/misc/: doxygenextra.css  header.html
stdcomm/gradle/: init.gradle.kts  libs.versions.toml
stdcomm/gradle/wrapper/: gradle-wrapper.properties
stdcomm/include/: CPPLINT.cfg
stdcomm/tests/: all_test.cc
(+90 files in other folders)
